--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "formik": "^2.2.9",
     "match-sorter": "^6.3.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
-    "react-select": "^5.2.1"
+    "react-select": "^5.2.1",
+    "swr": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
